Changes: - fixed liquiBase - fixed openapi specifications - added controller - added model
