# accounts/src/main/java/com/vitualwardrobe/accounts/constants/AccountType.java
@@ -1,0 +1,5 @@
+package com.vitualwardrobe.accounts.constants;
+
+public enum AccountType {
+    ADMIN, USER
+}
